@@ -254,10 +254,10 @@ Widget status_history(Widget parent)
 	} while (i != current_history);
     }
 
-    if (lesstif_version < 1000)
+    if (lesstif_version <= 82)
     {
-	// LessTif 0.79 fails to resize the shell properly.  Use this
-	// hack instead.
+	// LessTif 0.82 and earlier fail to resize the shell properly.
+	// Use this hack instead.
 	XmFontList font_list;
 	XtVaGetValues(history_label, XmNfontList, &font_list, NULL);
     
